# hray

./: .gitignore  LICENSE  README.md
raycast_ext/hray/: package-lock.json  package.json
raycast_ext/hray/src/: hray.tsx
server/: Dockerfile  README.md  docker-compose-dev.yaml  docker-compose.yaml  init.sql  pyproject.toml
server/app/: main.py
server/app/db/: feedback.py
server/app/llm/agent/: aggregate_agent.py  amk_agent.py  response_agent.py  routing_rag.py  search_agent.py  search_rag.py  summary_agent.py  tool_rag.py
server/app/llm/models/: __init__.py  llama_cpp.py
server/app/llm/pipeline/: quick_reply.py
server/app/llm/signature/: __init__.py  amk_signature.py  assistance_signature.py  foundation.py
server/app/llm/tool/: search_tool.py
server/app/logger/: __init__.py  jaeger_tracer.py  log.py  phoenix_tracer.py  tracer.py  unified_tracer.py
server/app/routers/chitchat/: __init__.py  amk_badminton.py  hray_message.py
