[tool.poetry]
name = "hray"
version = "0.1.0"
description = "Hray server"
authors = ["Di Nguyen <hdinguyen@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
dspy = "2.6.0rc6"
fastapi = "0.111.1"
uvicorn = "0.22.0"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
